--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "nodejs-webapp-express",
+  "name": "NodeApiApp",
   "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
-  "description": "nodejs-webapp-express",
-  "author": {
-    "name": "alagrawa"
-  },
+  "description": "",
+  "main": "server.js",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.0",
-    "debug": "^2.2.0",
-    "express": "^4.14.0",
-    "morgan": "^1.7.0",
-    "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "express": "^4.12.3",
+    "http": "0.0.0",
+    "jsonpath": "^0.1.3",
+    "swaggerize-express": "^3.0.3"
   },
   "engines": {
-    "node": "~6.10.x"
+    "node": "0.12.x"
   }
 }
