--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,16 +3,82 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
-pool:
-  vmImage: 'Ubuntu 16.04'
+
+
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '8.x'
-  displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+- task: NodeTool@0
+
+  displayName: 'Use Node version'
+
+  inputs:
+
+    versionSpec: 6.9
+
+
+
+
+
+- task: Npm@0
+
+  displayName: 'npm install'
+
+  inputs:
+
+    arguments: '--force'
+
+
+
+
+
+- task: ArchiveFiles@1
+
+  displayName: 'Archive files '
+
+  inputs:
+
+    rootFolder: '$(System.DefaultWorkingDirectory)'
+
+
+
+    includeRootFolder: false
+
+
+
+
+
+- task: CopyFiles@2
+
+  displayName: 'Copy File to: $(TargetFolder)'
+
+  inputs:
+
+    SourceFolder: '$(Build.ArtifactStagingDirectory)'
+
+
+
+    Contents: '$(Build.BuildId).zip'
+
+
+
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\ArtifactsToBePublished'
+
+
+
+
+
+- task: PublishBuildArtifacts@1
+
+  displayName: 'Publish Artifact: drop'
+
+  inputs:
+
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)\ArtifactsToBePublished'
+
+
+
+
+
+
+
